# cmrad-user-institution-api

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/cmrad_user_institution_api/api/: dependencies.py  endpoints.py  models.py
src/cmrad_user_institution_api/app/: exceptions.py  institution_service.py  user_service.py
src/cmrad_user_institution_api/domain/: institution.py  institution_entity.py  models.py  user.py  user_entity.py  user_institution_association.py
src/cmrad_user_institution_api/infrastructure/: database.py  models.py
src/cmrad_user_institution_api/infrastructure/repositories/: abstract_repository.py  institution_repository.py  user_institution_repository.py  user_repository.py
src/user_institution_api/api/: dependencies.py  endpoints.py
src/user_institution_api/app/: institution_service.py  user_service.py
src/user_institution_api/domain/: user.py
src/user_institution_api/infrastructure/: database.py  settings.py
src/user_institution_api/infrastructure/repositories/: institution_repository.py  user_institution_repository.py  user_repository.py
tests/: simulate.py
tests/unit/: conftest.py
tests/unit/api/: endpoints.py  test_endpoints.py
